fixes blurred text in chrome bug

--- a/assets/css/thz-utility.css
+++ b/assets/css/thz-utility.css
@@ -1249,7 +1249,6 @@ body.wallpaper-inititalized{
 	-ms-transform: translate3d(0, 0, 0);
 	-o-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
-	-webkit-perspective: 1000px;
 }
 .slick-track {
 	position: relative;
